--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
             eruda.init({
                 tool: ['console'],
                 useShadowDom: true,
-                autoScale: true,
                 defaults: {
                     displaySize: 50,
                     transparency: 0.9,
                     theme: 'Monokai Pro'
                 }
             });
+            eruda.scale(2)
         </script>
         <div>
             <span id="fps"></span>
