--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>Mobile JS</title>
     </head>
     <body>
-        <div id="msg"></div>
+        <center>
+            <h1 id="msg"></h1>
+        </center>
+        
         <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
         <script>
             let encourgement = "Good luck kids!";
