--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <center>
-            <h1 id="msg"></h1>
+            <h6 id="msg"></h6>
         </center>
         
         <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
         <script>
-            let encourgement = "Good luck kids!";
+            let encourgement = "Good luck kids! \n <br> -Cyborg.Ean";
             let updateEncouragement = () => {
                 document.getElementById("msg").innerText = encourgement;
             }
