--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <center>
-            <h6 id="msg"></h6>
+            <font size="64" id="msg"></font>
         </center>
         
         <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
