--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
         <script>
-            let encourgement = "Good luck kids! \n <br> -Cyborg.Ean";
+            let encourgement = "Good luck kids! \n -Cyborg.Ean";
             let updateEncouragement = () => {
                 document.getElementById("msg").innerText = encourgement;
             }
