--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         
         <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
         <script>
-            let encourgement = "Good luck kids! \n -Cyborg.Ean";
+            let encouragement = "Good luck kids! \n -Cyborg.Ean";
             let updateEncouragement = () => {
-                document.getElementById("msg").innerText = encourgement;
+                document.getElementById("msg").innerText = encouragement;
             }
             eruda.init({
                 tool: ['console'],
