--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
         <script>
-            let encouragement = "Good luck kids! \n -Cyborg.Ean";
+            let encouragement = "My name is San-teeeee! \n -Cyborg.Ean";
             let updateEncouragement = () => {
                 document.getElementById("msg").innerText = encouragement;
             }
